<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.carmenandroid.PedirPistaActivity"
    tools:ignore="RtlHardcoded" >
   
<!-- 


   

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginTop="18dp"
        android:hint="@string/pais" />  -->

	<TextView
	    android:id="@+id/tituloPista"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:height="@dimen/abc_text_size_large_material"
	    android:text="@string/tituloP"
	    
	    android:textColor="@style/AppTheme" />

    <Button
        android:id="@+id/lugar3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/lugar1"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="100dp"
        android:text="@string/lugar3" />

    <Button
        android:id="@+id/lugar1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/lugar3"
        android:layout_marginTop="14dp"
        android:text="@string/lugar1" />

    <Button
        android:id="@+id/lugar2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/lugar1"
        android:layout_alignRight="@+id/lugar1"
        android:layout_below="@+id/lugar1"
        android:layout_marginTop="19dp"
        android:text="@string/lugar2" />
    
    <Button
        android:id="@+id/orden"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:onClick="pedirOrden"
        android:text="@string/orden" />

    <Button
        android:id="@+id/viajar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:onClick="irAViajar"
        android:text="@string/viajar" />

 <!--    <TextView
        android:id="@+id/pistaLugar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/lugar2"
        android:layout_marginTop="47dp"
        android:ems="10"
        android:hint="@string/pistaMostrar" /> -->
 
</RelativeLayout>
