<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal"
    tools:context="com.example.carmenandroid.OrdenActivity" >


 <TextView
        android:id="@+id/ordenDeArresto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
       	android:layout_alignParentTop="true"
        android:layout_marginTop="18dp"
        android:hint="@string/arresto" /> 
	 
  <Button
      android:id="@+id/emitirOrden"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_alignParentLeft="true"
      android:layout_alignParentRight="true"
      android:layout_alignParentTop="true"
      android:layout_marginTop="212dp"
      android:text="@string/emitir" />

    <Spinner
        android:id="@+id/villanoMostrar"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/ordenDeArresto"
        android:layout_marginTop="59dp"
        android:spinnerMode="dropdown" />

    <Button
        android:id="@+id/viajar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/buscarPista"
        android:layout_alignBottom="@+id/buscarPista"
        android:layout_alignParentRight="true"
        android:onClick="irAViajar"
        android:text="@string/viajar" />

    <Button
        android:id="@+id/buscarPista"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_marginBottom="28dp"
        android:onClick="pedirPista"
        android:text="@string/pista" />

</RelativeLayout>
